# revula

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.cursor/: mcp.json
.github/workflows/: ci.yml
scripts/install/: install_all.sh  install_verify.sh
scripts/test/: run_tests.sh  validate_install.py
src/revula/: cache.py  config.py  rate_limit.py  sandbox.py  session.py
src/revula/tools/admin/: __init__.py
src/revula/tools/android/: decompile.py  device.py  repack.py  scanners.py
src/revula/tools/antianalysis/: __init__.py  detect_bypass.py
src/revula/tools/deobfuscation/: __init__.py  deobfuscate.py
src/revula/tools/exploit/: __init__.py  format_string.py  shellcode.py
src/revula/tools/malware/: __init__.py  triage.py
src/revula/tools/platform/: gdb_enhanced.py  qemu.py
src/revula/tools/protocol/: __init__.py  protocol.py
src/revula/tools/static/: __init__.py  capa_scan.py  decompile.py  entropy.py  pe_elf.py  strings.py  symbols.py
src/revula/tools/symbolic/: symbolic.py
src/revula/tools/unpacking/: __init__.py  unpack.py
src/revula/tools/utils/: __init__.py  crypto.py  hex.py
tests/: conftest.py  test_android.py  test_core.py  test_static.py
